# LQR

./: CMakeLists.txt  README.md  package.xml
config/: lqr.yaml
include/LQR/: LQR_node.hpp  c2f.hpp  trajectoryPoint.hpp
include/lqr/: LQR_node.hpp  frenetSpace.hpp  lqr_node.hpp  trajectoryPoint.hpp
launch/: lqr.launch.py
src/: LQR_node.cpp  frenetSpace.cpp  kdtree_search_speed.cpp  lqr_node.cpp
