<package format="2">
  <name>lqr</name>
  <version>0.0.1</version>
  <description>The lqr package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mmr_base</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend> <!-- PCL dependencies are often handled via pcl_conversions -->
  <depend>pcl_msgs</depend>        <!-- Another PCL related package often used -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

